--- a/src/app/components/Components.module.scss
+++ b/src/app/components/Components.module.scss
@@ -5,13 +5,14 @@
   flex-direction: column;
   gap: 10px;
   width: 300px;
+  margin: 1rem 0;
 }
 
 .btn {
   appearance: none;
   background-color: transparent;
   border: 0.125em solid white;
-  border-radius: 0.9375em;
+  border-radius: 50%;
   box-sizing: border-box;
   color: white;
   cursor: pointer;
@@ -22,11 +23,13 @@
   font-weight: 600;
   line-height: normal;
   margin: 0;
-  min-height: 3.75em;
+  // min-height: 3.75em;
   min-width: 0;
-  width: 100%;
+  aspect-ratio: 1 / 1;
+  // width: 100%;
   outline: none;
-  padding: 1em 2.3em;
+  // padding: 1em 2.3em;
+  padding: .5rem;
   text-align: center;
   text-decoration: none;
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -51,6 +54,20 @@
   box-shadow: none;
   transform: translateY(0);
 }
+
+.btnglow {
+  animation: glow 2s infinite;
+}
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 0px hsl(0,0%, 50), 0 0 5px hsl(0,0%, 50), 0 0 10px hsl(0,0%, 50), 0 0 15px hsl(0,0%, 50);
+  }
+  100% {
+    box-shadow: 0 0 10px hsl(0,0%, 50), 0 0 20px hsl(0,0%, 50), 0 0 30px hsl(0,0%, 50), 0 0 40px hsl(0,0%, 50);
+  }
+}
+
+
 
 .transcriptText {
   font-size: 20px;
