--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  /* min-height: calc(100vh - 700px); */
   background-color: #262626;
 }
 
